--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <body>
   <div id="tree-container"></div>
   <div id="bio"></div>
+  <div id="donations">
+    If you found this tool helpful, all donations are appreciated. ETH: 0xCB187BAbfF22a47f59cfAd0439B9d655fc9070dd
+  </div>
 </body>
 </html>
