Fixed display children as fetched

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <script src="bower_components/d3/d3.min.js"></script>
   <script src="scripts/jquery.hoverIntent.minified.js"></script>
   <script src="scripts/tree.js"></script>
+  <script src="http://malsup.github.io/jquery.blockUI.js"></script>
 </head>
 <body>
   <div id="tree-container"></div>
   <div id="bio"></div>
+  <div><button id="demo12">Run</button></div>
   <div id="donations">
     If you found this tool helpful, all donations are appreciated. ETH: 0xCB187BAbfF22a47f59cfAd0439B9d655fc9070dd
   </div>
