--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="bower_components/d3/d3.min.js"></script>
   <script src="scripts/jquery.hoverIntent.minified.js"></script>
   <script src="scripts/tree.js"></script>
-  <script src="http://malsup.github.io/jquery.blockUI.js"></script>
+  <script src="scripts/jquery.blockUI.js"></script>
 </head>
 <body>
   <div id="tree-container"></div>
