Family Jewels update
-included more data for family jewels

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
   <div id="tree-container"></div>
-  <div id="bio"></div>
+  <div id="bio">
+    <div id="mainbio"></div>
+    <div id="subbio"></div>
+  </div>
   <div id="bottomleft">
     <form id="interface">
       <label for="kittyLimit">Kitty Limit</label>
