--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
       <button type="button" name="goToKitty">Go to Kitty</button><br>
 
       <label for="kittyLimit">Kitty Limit</label>
-      <input type="text" name="kittyLimit" title="For performance, it's important to limit the total number of kitties displayed."><br>
+      <input type="text" name="kittyLimit" title="For performance, it's important to limit the total number of kitties displayed"><br>
 
       <label for="centerOnUpdate">Center on update</label>
-      <input type="checkbox" name="centerOnUpdate">
+      <input type="checkbox" name="centerOnUpdate" >
+
+      <label for="autoCollapse">Auto collapse</label>
+      <input type="checkbox" name="autoCollapse" title="Add nodes in a collapsed state">
 
     </form>
     <div id="donations" class="panel">If you found this tool helpful, all donations are appreciated. ETH: 0xCB187BAbfF22a47f59cfAd0439B9d655fc9070dd</div>
