quickly explosing jewels setting

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       <label for="kittyLimit">Kitty Limit</label>
       <input type="text" name="kittyLimit" title="For performance, it's important to limit the total number of kitties displayed"><br>
 
+      <label for="showJewels">Show Jewels</label>
+      <input type="checkbox" name="showJewels" >
+
       <label for="centerOnUpdate">Center on update</label>
       <input type="checkbox" name="centerOnUpdate" >
 
