--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="style/tree.css">
+  <link rel="stylesheet" type="text/css" href="style/ckstyles.css">
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/d3/d3.min.js"></script>
   <script src="scripts/jquery.hoverIntent.minified.js"></script>
