fix ext external link

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="style/tree.css">
   <link rel="stylesheet" type="text/css" href="style/ckstyles.css">
-  <link href="http://cdn.sencha.io/ext-4.1.1-gpl/resources/css/ext-all.css" rel="stylesheet" />
-  <script src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.0.0/classic/theme-crisp/resources/theme-crisp-all.css" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.0.0/ext-all.js"></script>
   <!-- TODO: gut jquery -->
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/d3/d3.min.js"></script>
